funcionamiento de index mapeo de tablas dinamicas

--- a/index.html
+++ b/index.html
@@ -85,6 +85,38 @@
                 </div>
             </section>
             <section>
+                <div class="container">
+                    <h2 class="section__titulo section__titulo--variante">Lista de Equipos</h2>
+                    <hr class="section__hr section__hr--titulo">
+                    <table class="table table-danger table-hover table-striped">
+                        <thead>
+                            <tr>
+                                <th scope="col">Nombre</th>
+                                <th scope="col">Dorsal</th>
+                                <th scope="col">Tiempo</th>
+                                <th scope="col">Categoria</th>
+                                <th scope="col">Equipo</th>
+                            </tr>
+                        </thead>
+                        <tbody id="tablaGeneralHombre">
+                        </tbody>
+            </section>
+            <section>
+                <div class="container">
+                    <h2 class="section__titulo section__titulo--variante">Lista de Equipos</h2>
+                    <hr class="section__hr section__hr--titulo">
+                    <table class="table table-danger table-hover table-striped">
+                        <thead>
+                            <tr>
+                                <th scope="col">Nombre</th>
+                                <th scope="col">Dorsal</th>
+                                <th scope="col">Tiempo</th>
+                                <th scope="col">Categoria</th>
+                                <th scope="col">Equipo</th>
+                            </tr>
+                        </thead>
+                        <tbody id="tablaGeneralMujer">
+                        </tbody>
             </section>
 
         </main>
