--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                 </div>
             </section>
             <section>
-                <div class="container">
-                    <h2 class="section__titulo section__titulo--variante">Lista de Equipos</h2>
+                <div class="container mt-4">
+                    <h2 class="section__titulo section__titulo--variante">Lista de Corredores</h2>
                     <hr class="section__hr section__hr--titulo">
                     <table class="table table-danger table-hover table-striped">
                         <thead>
@@ -100,10 +100,12 @@
                         </thead>
                         <tbody id="tablaGeneralHombre">
                         </tbody>
+                    </table>
+                </div>
             </section>
             <section>
-                <div class="container">
-                    <h2 class="section__titulo section__titulo--variante">Lista de Equipos</h2>
+                <div class="container mt-4">
+                    <h2 class="section__titulo section__titulo--variante">Lista de Corredores</h2>
                     <hr class="section__hr section__hr--titulo">
                     <table class="table table-danger table-hover table-striped">
                         <thead>
@@ -117,8 +119,11 @@
                         </thead>
                         <tbody id="tablaGeneralMujer">
                         </tbody>
+                    </table>
+                </div>
             </section>
-
+            <section id="tablasCategoria">
+            </section>
         </main>
         <footer class=" footer">
             <div>
