--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
         <!-- LINKS PROPIOS -->
         <link rel="stylesheet" href="./css/style.css">
 
-        <!-- KEYWORKS AND DESCRIPTION -->
-        <meta name="keywords" content="">
-        <meta name="description" content="">
     </head>
 
     <body>
@@ -86,7 +83,7 @@
             </section>
             <section>
                 <div class="container mt-4">
-                    <h2 class="section__titulo section__titulo--variante">Lista de Corredores</h2>
+                    <h2 class="section__titulo section__titulo--variante">Genereal Hombres</h2>
                     <hr class="section__hr section__hr--titulo">
                     <table class="table table-danger table-hover table-striped">
                         <thead>
@@ -105,7 +102,7 @@
             </section>
             <section>
                 <div class="container mt-4">
-                    <h2 class="section__titulo section__titulo--variante">Lista de Corredores</h2>
+                    <h2 class="section__titulo section__titulo--variante">General Mujeres</h2>
                     <hr class="section__hr section__hr--titulo">
                     <table class="table table-danger table-hover table-striped">
                         <thead>
