funcionalidades varias con datos, todo funcionando

--- a/categoria.html
+++ b/categoria.html
@@ -86,8 +86,8 @@
                         <div class="col-md-6" id="categoria__genero" name="categoria__genero">
                             <label class="form-label">Genero</label>
                             <select class="form-select" id="genero" name="localidad">
-                                <option value="0" selected>Hombre</option>
-                                <option value="1">Mujer</option>
+                                <option value="0" selected>VARONES</option>
+                                <option value="1">DAMAS</option>
                             </select>
                         </div>
                         <button class="btn btn-enviar" type="submit"> Guardar Categoria</button>
@@ -98,7 +98,7 @@
                 <div class="container">
                     <h2 class="section__titulo section__titulo--variante">Lista de Equipos</h2>
                     <hr>
-                    <table class="table table-danger table-hover table-striped">
+                    <table class="table table-dark table-hover table-striped">
                         <thead>
                             <tr>
                                 <th scope="col">Nombre</th>
