--- a/corredor.html
+++ b/corredor.html
@@ -119,7 +119,7 @@
                 <div class="container">
                     <h2 class="section__titulo section__titulo--variante">Lista de Equipos</h2>
                     <hr class="section__hr section__hr--titulo">
-                    <table class="table table-danger table-hover table-striped">
+                    <table class="table table-dark table-hover table-striped">
                         <thead>
                             <tr>
                                 <th scope="col">Nombre</th>
