--- a/carrera.html
+++ b/carrera.html
@@ -25,8 +25,7 @@
             <div class="navbar-container mt-5">
                 <nav class="navbar navbar-expand-lg navbar-dark  navbar-container__gradiente fixed-top  px-4">
                     <a href="./index.html">
-                        <i class="fas fa-running fa-3x logo"></i>
-                        <i class="fas fa-running fa-3x logo"></i>
+                        <i class="fa-solid fa-person-biking fa-3x logo"></i>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
