--- a/index.html
+++ b/index.html
@@ -83,11 +83,12 @@
             </section>
             <section>
                 <div class="container mt-4">
-                    <h2 class="section__titulo section__titulo--variante">Genereal Hombres</h2>
+                    <h2 class="section__titulo section__titulo--variante">Genereal Varones</h2>
                     <hr class="section__hr section__hr--titulo">
-                    <table class="table table-danger table-hover table-striped">
+                    <table class="table table-dark table-hover table-striped">
                         <thead>
                             <tr>
+                                <th scope="col">Posicion</th>
                                 <th scope="col">Nombre</th>
                                 <th scope="col">Dorsal</th>
                                 <th scope="col">Tiempo</th>
@@ -95,18 +96,19 @@
                                 <th scope="col">Equipo</th>
                             </tr>
                         </thead>
-                        <tbody id="tablaGeneralHombre">
+                        <tbody id="tablaGeneralVarones">
                         </tbody>
                     </table>
                 </div>
             </section>
             <section>
                 <div class="container mt-4">
-                    <h2 class="section__titulo section__titulo--variante">General Mujeres</h2>
+                    <h2 class="section__titulo section__titulo--variante">General Damas</h2>
                     <hr class="section__hr section__hr--titulo">
-                    <table class="table table-danger table-hover table-striped">
+                    <table class="table table-dark table-hover table-striped">
                         <thead>
                             <tr>
+                                <th scope="col">Posicion</th>
                                 <th scope="col">Nombre</th>
                                 <th scope="col">Dorsal</th>
                                 <th scope="col">Tiempo</th>
@@ -114,7 +116,7 @@
                                 <th scope="col">Equipo</th>
                             </tr>
                         </thead>
-                        <tbody id="tablaGeneralMujer">
+                        <tbody id="tablaGeneralDamas">
                         </tbody>
                     </table>
                 </div>
